<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:contentPadding="5dp"
                android:background="@color/white"
                android:elevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_marginTop="150dp"
            android:background="@color/white"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    tools:text="Fiction Olay"/>

                <TextView
                    android:id="@+id/textLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    tools:text="Fiction Olay"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:layout_marginBottom="2dp"
                        tools:text="Fiction Olay"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/admin"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team"
                        android:layout_marginBottom="2dp"
                        tools:text="Fiction Olay"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/product"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/bottomButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonCall"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/phone"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/call"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonSMS"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/speak"

                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/SMS"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonEmail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/email"
                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/email"/>
            </LinearLayout>
        </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="100dp"
                android:layout_width="@dimen/imageSize"
                android:layout_height="@dimen/imageSize"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>



        </FrameLayout>
</RelativeLayout>



